# udesigner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Resources.qrc  main.cpp  udesigner.cpp  udesigner.h  udesigner.ui  version.rc
.github/workflows/: windows-mingw.yml
resources/: MacOS.qss
